# gawk-prebuilt

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE_NOTES  MODULE.bazel  README.md  bazel_overlay.rules_shell_dep.patch  bazel_overlay.windows_linker_allow_multiple_definitions.patch  build_overlay.gawk_sh_tests_fix_cd.patch  build_overlay.gawk_tests_fix_redirections.patch  build_overlay.gawk_tests_manual_todos.patch  build_overlay.gawk_tests_windows_skips.patch  gawk.quote_include_regex.patch  gawk.windows_popen.patch  install.bzl  install.sh  release.bzl  release_tag.sh
.github/workflows/: build.yaml  release.yml
