load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

PLATFORMS = {
    "darwin_amd64": "@zig_sdk//platform:darwin_amd64",
    "darwin_arm64": "@zig_sdk//platform:darwin_arm64",
    "linux_arm64_musl": "@zig_sdk//libc_aware/platform:linux_arm64_musl",
    "linux_amd64_musl": "@zig_sdk//libc_aware/platform:linux_amd64_musl",
}

[
    platform_transition_filegroup(
        name = "for_" + name,
        srcs = ["@gawk"],
        target_platform = platform,
    )
    for name, platform in PLATFORMS.items()
]

filegroup(
    name = "for_all_platforms",
    srcs = ["for_" + name for name, platform in PLATFORMS.items()],
)
