load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load(":install.bzl", "install_script")

platform_transition_filegroup(
    name = "gawk_darwin_amd64",
    srcs = ["@gawk"],
    target_platform = "@zig_sdk//platform:darwin_amd64",
)

platform_transition_filegroup(
    name = "gawk_darwin_arm64",
    srcs = ["@gawk"],
    target_platform = "@zig_sdk//platform:darwin_arm64",
)

platform_transition_filegroup(
    name = "gawk_linux_amd64",
    srcs = ["@gawk"],
    target_platform = "@zig_sdk//libc_aware/platform:linux_amd64_musl",
)

platform_transition_filegroup(
    name = "gawk_linux_arm64",
    srcs = ["@gawk"],
    target_platform = "@zig_sdk//libc_aware/platform:linux_arm64_musl",
)

platform_transition_filegroup(
    name = "gawk_windows_amd64",
    srcs = ["@gawk"],
    target_platform = "@zig_sdk//platform:windows_amd64",
)

platform_transition_filegroup(
    name = "gawk_windows_arm64",
    srcs = ["@gawk"],
    target_platform = "@zig_sdk//platform:windows_arm64",
)

install_script(
    name = "bundle_release",
    files = {
        "gawk_darwin_amd64": ":gawk_darwin_amd64",
        "gawk_darwin_arm64": ":gawk_darwin_arm64",
        "gawk_linux_amd64": ":gawk_linux_amd64",
        "gawk_linux_arm64": ":gawk_linux_arm64",
        "gawk_windows_amd64": ":gawk_windows_amd64",
        "gawk_windows_arm64": ":gawk_windows_arm64",
    },
)
