bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "gawk", version = "5.3.2.bcr.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0")
bazel_dep(name = "rules_multirun", version = "0.12.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
)

# Disambiguate regex.h to use Gawk's version and not what might be found in the sysroot.
single_version_override(
    module_name = "gawk",
    patch_strip = 0,
    patches = ["//:gawk.quote_include_regex.patch"],
    version = "5.3.2.bcr.1",
)
