bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "gawk", version = "5.3.2.bcr.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "platforms", version = "1.0.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

single_version_override(
    module_name = "gawk",
    patch_strip = 0,
    patches = [
        "//:gawk.quote_include_regex.patch",  # Disambiguate regex.h to use Gawk's version and not what might be found in the sysroot.
        "//:gawk.windows_popen.patch",
        "//:bazel_overlay.windows_linker_allow_multiple_definitions.patch",
        "//:bazel_overlay.rules_shell_dep.patch",
        "//:build_overlay.gawk_sh_tests_fix_cd.patch",
	"//:build_overlay.gawk_tests_manual_todos.patch",
	"//:build_overlay.gawk_tests_fix_redirections.patch",
	"//:build_overlay.gawk_tests_windows_skips.patch",
    ],
    version = "5.3.2.bcr.1",
)
